--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "simulateur-commission-uemoa",
   "version": "1.0.0",
-  "description": "Simulateur Commission UEMOA - Traçabilité POC",
+  "description": "Simulateur Commission UEMOA - Système Central de Traçabilité",
   "main": "api/health.js",
   "scripts": {
     "dev": "vercel dev",
@@ -9,11 +9,13 @@
     "start": "node api/health.js"
   },
   "dependencies": {
+    "axios": "^1.6.0",
     "cors": "^2.8.5",
-    "express": "^4.18.2",
     "uuid": "^9.0.1"
   },
   "engines": {
     "node": "18.x"
-  }
+  },
+  "keywords": ["commission", "uemoa", "tracabilite", "mulesoft", "central"],
+  "author": "Commission UEMOA - Ouagadougou"
 }
