--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@
 # ============================================================================
 
 # Dependencies
-node_modules/
+#node_modules/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
